Revert "start_project"
This reverts commit 6895d87690d815aa00fbbd5741089d904bba6281.

--- a/Server/Application.csproj
+++ b/Server/Application.csproj
@@ -6,8 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-    <BaseOutputPath>E:\United_App\Comunicator\Bin</BaseOutputPath>
-    <ApplicationIcon>favicon.ico</ApplicationIcon>
+    <BaseOutputPath>F:\StarNFT2\Bin</BaseOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,8 +24,6 @@
     <PackageReference Include="NLog.Extensions.Logging" Version="5.0.0-preview.3" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
     <PackageReference Include="System.Text.Encoding" Version="4.3.0" />
-    <PackageReference Include="Telegram.Bot" Version="18.0.0" />
-    <PackageReference Include="Telegram.Bot.Extensions.Polling" Version="1.0.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -74,7 +71,6 @@
 		<Content Include="ConfigEx\HtBase.xml">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
-		<Content Include="favicon.ico" />
 	</ItemGroup>
 
 </Project>
